itsf/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itsf-service
  namespace: itsf
spec:
  selector:
    app: itsf-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
