itsf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itsf-ingress
  namespace: itsf
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - hello-itsf.local.domain
    - www.hello-itsf.local.domain
    secretName: tls-secret-hello-itsf-local-domain
  rules:
  - host: hello-itsf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itsf-service
            port:
              number: 80
  - host: www.hello-itsf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: itsf-service
            port:
              number: 80
